...
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.aqchen.filterfiesta.ui.auth.login.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_passwordResetFragment"
            app:destination="@id/passwordResetFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.aqchen.filterfiesta.ui.auth.register.RegisterFragment"
        android:label=""
...
