...
    <string name="login_title">Login</string>
    <string name="login_subtitle">Welcome back!</string>
    <string name="login_submit_label">Login</string>
    <string name="login_successful">Logged-in!</string>
    <string name="login_failed">Failed to login</string>
    <string name="login_no_account_question">Don\'t have an account? Sign Up Now</string>
    <string name="login_signup_action_text">Sign Up Now</string>
    <string name="login_forgot_password_question">Forgot your password? Click Here to Reset</string>
    <string name="login_password_action_text">Click Here to Reset</string>

    <!-- Strings used for Register Fragment -->
    <string name="register_title">Sign Up</string>
    <string name="register_subtitle">Create an account</string>
    <string name="register_submit_label">Sign Up</string>
    <string name="register_repeat_password_input_hint">Confirm password</string>
...
